--- a/GBLPingExample/SupportFIles/Info.plist
+++ b/GBLPingExample/SupportFIles/Info.plist
@@ -18,6 +18,8 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -41,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSLocalNetworkUsageDescription</key>
+    <string>$(PRODUCT_NAME) needs permission to find and talk to other devices on your local network.</string>
 </dict>
 </plist>
